[project]
name = "heos-scrobbler"
version = "0.1.0"
description = "Update now playing and scrobble tracks listened with HEOS device to Last.fm."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dynaconf>=3.2.12",
    "pydantic>=2.12.3",
    "pyheos>=1.0.5",
    "pylast>=6.0.0",
    "ssdp>=1.3.1",
]

[dependency-groups]
dev = [
    "bandit>=1.8.6",
    "faker>=37.12.0",
    "isort>=7.0.0",
    "pre-commit>=4.3.0",
    "pyright>=1.1.406",
    "pytest>=8.4.2",
    "pytest-asyncio>=1.2.0",
    "pytest-coverage>=0.0",
    "pytest-mock>=3.15.1",
    "ruff>=0.14.1",
]

[tool.pyright]
include = ["main.py", "heos_scrobbler/"]
exclude = [
    "**/.venv",
    "**/venv",
    "**/__pycache__"
]
reportMissingImports = "error"
reportMissingTypeStubs = false
pythonVersion = "3.14"
pythonPlatform = "Windows"
executionEnvironments = [
    { root = ".", pythonVersion = "3.14", pythonPlatform = "Windows" },
    { root = ".", pythonVersion = "3.14", pythonPlatform = "Linux" },
    { root = ".", pythonVersion = "3.13", pythonPlatform = "Windows" },
    { root = ".", pythonVersion = "3.13", pythonPlatform = "Linux" }
]

[tool.bandit]
exclude_dirs = [".venv", "tests"]

[tool.isort]
line_length = 120
multi_line_output = 3
include_trailing_comma = true

[tool.ruff]
line-length = 120

[tool.ruff.lint]
extend-select = ["E501"]

[tool.ruff.format]
quote-style = "double"
docstring-code-format = true
line-ending = "lf"

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[tool.coverage.run]
source = ["heos_scrobbler"]

[tool.coverage.report]
show_missing = true
skip_empty = true
sort = "Name"
